--- a/style.css
+++ b/style.css
@@ -121,28 +121,77 @@ label {
   flex-direction: column;
 }
 
-.row-1{
+.row-1,
+.row-2,
+.row-3 {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 33.3%;
+  height: 33.33%;
   background-color: rgba(255, 0, 0, 0.9);
 }
 
 .row-2{
-  width: 100%;
-  height: 33.3%;
   background-color: rgba(0, 255, 0, 0.9);
 }
 
 .row-3{
-  width: 100%;
-  height: 33.3%;
   background-color: rgba(0, 0, 255, 0.9);
 }
 
 .card1,
 .card2,
-.card3 {
+.card3,
+.card4,
+.card5,
+.card6,
+.card7,
+.card8,
+.card9,
+.card10 {
   border: 2px solid black;
+  background-color: white;
+}
+
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 20%;
+	height: 90%;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
 }
