--- a/style.css
+++ b/style.css
@@ -87,14 +87,15 @@ label {
 .welcome-players-text,
 .p1-error-message,
 .game-rules {
-  margin: 1%;
-  font-size: 115%;
+
+  font-size: 125%;
   text-align: center;
   background-color: rgba(255, 255, 0, 0.9);
   width: 70%;
 }
 
 .welcome-players-text {
+  margin-top: 5%;
   font-size: 150%;
 }
 
@@ -105,6 +106,7 @@ label {
   font-size: 120%;
   border-radius: 30px;
 }
+
 
 .name-heading,
 .matches-heading,
@@ -166,7 +168,8 @@ section {
 }
 
 .p1-error-message {
-  top: 26%;
+  top: 30%;
+  width: 73%;
   position: absolute;
 }
 
@@ -217,8 +220,4 @@ section {
 
 .hidden {
   display: none;
-}
-
-.disabled {
-  cursor: default;
 }
