--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ section {
 .card8,
 .card9,
 .card10 {
+  transform: rotate(8deg);
   border: 2px solid black;
   background-color: white;
 }
@@ -171,6 +172,12 @@ section {
   top: 30%;
   width: 73%;
   position: absolute;
+}
+
+.front-of-card {
+  width: 500%;
+  height: 190px;
+
 }
 
 /* -------------------ANIMATIONS-------------------- */
@@ -193,14 +200,12 @@ section {
 .flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-
 	position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
 	backface-visibility: hidden;
-
 	position: absolute;
 	top: 0;
 	left: 0;
