--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ input {
   border-radius: 30px;
   font-size: 140%;
   padding-left: 20px;
+  border: 4px solid yellow;
   /* ^ need to add margin-left to inputs */
 }
 
@@ -153,19 +154,11 @@ section {
   height: 33.33%;
 }
 
-.card1,
-.card2,
-.card3,
-.card4,
-.card5,
-.card6,
-.card7,
-.card8,
-.card9,
-.card10 {
-  transform: rotate(8deg);
+.card {
+  /* transform: rotate(8deg); */
   border: 2px solid black;
   background-color: white;
+  box-shadow: 3px 3px;
 }
 
 .p1-error-message {
@@ -182,16 +175,24 @@ section {
 
 /* -------------------ANIMATIONS-------------------- */
 
+
+/* .flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+} */
+
 /* entire container, keeps perspective */
+
 .flip-container {
 	perspective: 1000px;
 }
 	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
+	.flip .flipper {
 		transform: rotateY(180deg);
 	}
 
-.flip-container, .front, .back {
+.flip-container,
+.front,
+.back {
 	width: 20%;
 	height: 90%;
 }
@@ -204,7 +205,8 @@ section {
 }
 
 /* hide back of pane during swap */
-.front, .back {
+.front,
+.back {
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0;
