--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ header {
   height: 70px;
 }
 
+.nav-button {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 70px;
+  width: 70px;
+}
+
 h1 {
   padding-top: 1%;
   color: white;
@@ -65,6 +73,7 @@ input {
   width: 50%;
   font-size: 120%;
   border-radius: 30px;
+  text-transform: uppercase;
 }
 
 .play-game-button-container {
@@ -106,6 +115,7 @@ label {
   width: 50%;
   font-size: 120%;
   border-radius: 30px;
+  text-transform: uppercase;
 }
 
 
@@ -119,12 +129,14 @@ label {
   font-size: 120%
 }
 
-.player-name {
+.p1-name,
+.p2-name {
   font-size: 150%;
   font-weight: bold;
 }
 
-.p1-score {
+.p1-score,
+.p2-score {
   font-size: 500%;
   font-weight: bold;
 }
@@ -162,13 +174,19 @@ section {
   top: 30%;
   width: 73%;
   position: absolute;
+  text-transform: uppercase;
 }
 
 .front-of-card {
   width: 500%;
   height: 190px;
-
 }
+
+.up-case {
+  text-transform: uppercase;
+}
+
+
 
 /* -------------------ANIMATIONS-------------------- */
 
@@ -208,8 +226,6 @@ section {
 /* front pane, placed above back */
 .front {
 	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
 }
 
 /* back, initially hidden pane */
