--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ button {
   font-weight: bolder;
 }
 
+button:hover {
+  background-color: #E40000;
+  transform: scale(.98);
+  transition: transform .5s;
+}
+
 .player-inputs {
   display: flex;
   justify-content: space-around;
@@ -150,6 +156,7 @@ section {
 .p2-game-board {
   background-color: rgba(255, 255, 0, 0.9);
   height: 100vh;
+  padding: 6%;
 }
 
 .card-area {
@@ -164,6 +171,7 @@ section {
   justify-content: space-around;
   width: 100%;
   height: 33.33%;
+  padding-top: 2%;
 }
 
 .card {
@@ -172,7 +180,8 @@ section {
 
 .p1-error-message {
   top: 30%;
-  width: 73%;
+  left: 0%;
+  width: 100%;
   position: absolute;
   text-transform: uppercase;
 }
@@ -195,6 +204,7 @@ section {
 }
 	/* flip the pane when hovered */
 	.flip .flipper {
+    /* transform: scale(.95); */
 		transform: rotateY(180deg);
     position: relative;
     left: -130px;
