--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button {
 }
 
 button:hover {
-  background-color: #E40000;
+  background-color: #189001;
   transform: scale(.98);
   transition: transform .5s;
 }
@@ -70,7 +70,6 @@ input {
   font-size: 140%;
   padding-left: 20px;
   border: 4px solid yellow;
-  /* ^ need to add margin-left to inputs */
 }
 
 .play-game-button {
@@ -124,7 +123,6 @@ label {
   text-transform: uppercase;
 }
 
-
 .name-heading,
 .matches-heading,
 .high-score-heading {
@@ -160,6 +158,7 @@ section {
 }
 
 .card-area {
+  perspective: 1000px;
   display: flex;
   flex-direction: column;
 }
@@ -174,10 +173,6 @@ section {
   padding-top: 2%;
 }
 
-.card {
-  /* transform: rotate(8deg); */
-}
-
 .p1-error-message {
   top: 30%;
   left: 0%;
@@ -186,61 +181,40 @@ section {
   text-transform: uppercase;
 }
 
-.front-of-card {
-  width: 500%;
-  height: 190px;
-}
-
 .up-case {
   text-transform: uppercase;
 }
 
-
-
-/* -------------------ANIMATIONS-------------------- */
-
-.flip-container {
-	perspective: 1000px;
-}
-	/* flip the pane when hovered */
-	.flip .flipper {
-    /* transform: scale(.95); */
-		transform: rotateY(180deg);
-    position: relative;
-    left: -130px;
-	}
-
-.flip-container,
-.front,
-.back {
-	width: 20%;
-	height: 90%;
+.card {
+  width: 25%;
+  height: 25%;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform .5s;
 }
 
-/* flip speed goes here */
-.flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-	position: relative;
+.card:active {
+  transform: scale(.95);
+  transition: transform .2s;
 }
 
-/* hide back of pane during swap */
-.front,
-.back {
-	backface-visibility: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
+.card.flip {
+  transform: rotateY(180deg);
 }
 
-/* front pane, placed above back */
-.front {
-	z-index: 2;
+.card-face,
+.card-back {
+  width: 170px;
+  height: 200px;
+  padding: 5px;
+  position: absolute;
+  border-radius: 2px;
+  backface-visibility: hidden;
 }
 
-/* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
+.card-face {
+  transform: rotateY(180deg);
 }
 
 .hidden {
