--- a/style.css
+++ b/style.css
@@ -157,6 +157,17 @@ section {
   padding: 6%;
 }
 
+.winner-message {
+  position: absolute;
+  z-index: 2;
+  top: 40%;
+  width: 100%;
+  text-transform: uppercase;
+  background-color: rgba(255, 255, 0, 0.9);
+  font-size: 400%;
+  text-align: center;
+}
+
 .card-area {
   perspective: 1000px;
   display: grid;
