--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ section {
   width: 100%;
   text-transform: uppercase;
   background-color: rgba(255, 255, 0, 0.9);
-  font-size: 400%;
+  font-size: 300%;
   text-align: center;
 }
 
@@ -233,6 +233,7 @@ section {
 }
 
 .card {
+  animation: fade-in 2s 1;
   width: 100%;
   height: 100%;
   position: relative;
@@ -270,4 +271,21 @@ section {
 
 .hidden {
   display: none;
+}
+
+.hidden-fade {
+  visibility: hidden;
+  opacity: 0;
+  transition:: delay 2s, visibility 0s 2s, opacity 2s linear;
+}
+
+@keyframes fade-in {
+  0%{
+    opacity: 0;
+    filter: blur(10px);
+  }
+  100%{
+    opacity: 1;
+    filter: blur(0px);
+  }
 }
