--- a/style.css
+++ b/style.css
@@ -5,30 +5,24 @@
   padding: 0px;
 }
 
-.clearfix:after{
-  clear: both;
-  content: '';
-  display: table;
-}
-
 header {
   background-color: #E40000;
+  height: 70px;
   text-align: center;
   width: auto;
-  height: 70px;
 }
 
 .nav-button {
+  height: 70px;
+  left: 0px;
   position: absolute;
   top: 0px;
-  left: 0px;
-  height: 70px;
   width: 70px;
 }
 
 h1 {
-  padding-top: 1%;
   color: white;
+  padding-top: 1%;
 }
 
 main {
@@ -38,10 +32,10 @@ main {
 }
 
 button {
-  cursor: pointer;
   background-color: #1CAB00;
-  border: 3px solid yellow;
+  border: 3px solid #FFFF00;
   color: white;
+  cursor: pointer;
   font-weight: bolder;
 }
 
@@ -58,92 +52,90 @@ button:hover {
 
 .player-1-container,
 .player-2-container {
-  margin-top: 3%;
   display: flex;
   flex-direction: column;
+  margin-top: 3%;
 }
 
 input {
-  height: 50px;
-  width: 300px;
+  border: 4px solid #FFFF00;
   border-radius: 30px;
   font-size: 140%;
+  height: 50px;
   padding-left: 20px;
-  border: 4px solid yellow;
+  width: 300px;
 }
 
 .play-game-button,
 .start-new-game-button {
-  margin-top: 29%;
-  height: 60px;
-  width: 50%;
-  font-size: 120%;
   border-radius: 30px;
+  font-size: 120%;
+  height: 60px;
+  margin-top: 29%;
   text-transform: uppercase;
+  width: 50%;
 }
 
 .start-new-game-button {
-  cursor: pointer;
-  height: 100px;
-  width: 100px;
   background-color: #1CAB00;
   border: 3px solid yellow;
   color: white;
+  cursor: pointer;
   font-weight: bolder;
-  /* need to refactor this button ----------------- */
+  height: 100px;
+  width: 100%;
 }
 
 .play-game-button-container {
-  width: 100%;
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 label {
-  font-family: Arial Black;
   color: white;
+  font-family: Arial Black;
   font-size: 130%
 }
 
 .rules-screen {
-  display: flex;
   align-items: center;
+  display: flex;
   flex-direction: column;
 }
 
 .welcome-players-text,
 .p1-error-message,
 .game-rules {
-
+  background-color: rgba(255, 255, 0, 0.9);
   font-size: 125%;
   text-align: center;
-  background-color: rgba(255, 255, 0, 0.9);
   width: 70%;
 }
 
 .welcome-players-text {
-  margin-top: 5%;
   font-size: 150%;
+  margin-top: 5%;
   text-transform: capitalize;
 }
 
 .play-game-button2 {
-  margin-top: 3%;
-  height: 60px;
-  width: 50%;
-  font-size: 120%;
   border-radius: 30px;
+  font-size: 120%;
+  height: 60px;
+  margin-top: 3%;
   text-transform: uppercase;
+  width: 50%;
 }
 
 .name-heading,
 .matches-heading,
 .high-score-heading {
   border-bottom: 2px solid black;
-  text-align: center;
+  font-size: 120%;
   padding-top: 6%;
   padding-bottom: 6%;
-  font-size: 120%
+  text-align: center;
 }
 
 .p1-name {
@@ -152,8 +144,7 @@ label {
   text-transform: capitalize;
 }
 
-.p1-score,
-.p2-score {
+.p1-score {
   font-size: 500%;
   font-weight: bold;
 }
@@ -172,14 +163,14 @@ section {
 
 .winner-message-l1,
 .winner-message-l2 {
-  position: absolute;
-  z-index: 2;
-  top: 30%;
-  width: 100%;
-  text-transform: uppercase;
   background-color: rgba(255, 255, 0, 0.9);
   font-size: 300%;
+  position: absolute;
   text-align: center;
+  text-transform: uppercase;
+  top: 30%;
+  width: 100%;
+  z-index: 2;
 }
 
 .winner-message-l2 {
@@ -187,15 +178,7 @@ section {
   font-size: 180%;
 }
 
-.start-new-game-button {
-
-  height: 300px
-  width: 300px;
-}
-
 .card-area {
-  perspective: 1000px;
-  padding: 6%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
@@ -203,6 +186,8 @@ section {
     ". one . two . three ."
     "four . five . six . seven"
     ". eight . nine . ten .";
+  padding: 6%;
+  perspective: 1000px;
 }
 
 .grid0 {
@@ -246,11 +231,11 @@ section {
 }
 
 .p1-error-message {
-  top: 30%;
   left: 0%;
-  width: 100%;
-  position: absolute;
   text-transform: uppercase;
+  top: 30%;
+  position: absolute;
+  width: 100%;
 }
 
 .up-case {
@@ -259,12 +244,12 @@ section {
 
 .card {
   animation: fade-in 2s 1;
-  width: 100%;
   height: 100%;
   position: relative;
   transform: scale(1);
   transform-style: preserve-3d;
   transition: transform .5s;
+  width: 100%;
 }
 
 .card:hover {
@@ -282,12 +267,12 @@ section {
 
 .card-face,
 .card-back {
-  width: 120px;
+  backface-visibility: hidden;
+  border-radius: 25px;
   height: 150px;
   padding: 5px;
   position: absolute;
-  border-radius: 25px;
-  backface-visibility: hidden;
+  width: 120px;
 }
 
 .card-face {
@@ -296,12 +281,6 @@ section {
 
 .hidden {
   display: none;
-}
-
-.hidden-fade {
-  visibility: hidden;
-  opacity: 0;
-  transition:: delay 2s, visibility 0s 2s, opacity 2s linear;
 }
 
 @keyframes fade-in {
