--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ button:hover {
   margin-top: 3%;
 }
 
+.player-2-container {
+  visibility: hidden;
+}
+
 input {
   border: 4px solid #FFFF00;
   border-radius: 30px;
@@ -292,4 +296,68 @@ section {
     opacity: 1;
     filter: blur(0px);
   }
+}
+
+@media only screen and (max-width: 700px) {
+
+  main {
+    background: 10% url(./images/mario_luigi_background.jpg);
+  }
+
+  .play-game-button {
+    margin-top: 16%;
+  }
+
+  .game-rules {
+    font-size: 80%;
+    width: 100%;
+  }
+
+  .p2-game-board {
+    display: none;
+  }
+
+  section {
+    display: grid;
+    grid-template-columns: 18% 82%;
+  }
+
+  .card-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      ". one . two ."
+      ". three . four ."
+      ". five . six ."
+      ". seven . eight ."
+      ". nine . ten .";
+    padding: 0%;
+  }
+
+  .card-face,
+  .card-back {
+    height: 100px;
+    width: 80px;
+  }
+
+  .name-heading,
+  .matches-heading,
+  .high-score-heading {
+    font-size: 60%;
+    padding-top: 6%;
+    padding-bottom: 6%;
+  }
+
+  .start-new-game-button {
+    font-size: 60%;
+    height: 70px;
+    margin-top: 29%;
+    width: 100%;
+  }
+
+  .player-2-container {
+    display: none;
+  }
+
 }
